[gd_scene load_steps=4 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Agent.png" type="Texture" id=2]
[ext_resource path="res://Agent.gd" type="Script" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Agent" type="Sprite" parent="." groups=[
"Agents",
]]
position = Vector2( 452.372, 259.051 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
[connection signal="new_food" from="." to="Agent" method="_on_World_new_food"]
[connection signal="eat_food" from="Agent" to="." method="_on_Agent_eat_food"]
